--- a/index.css
+++ b/index.css
@@ -76,6 +76,8 @@ input[readonly] {background-color: lightgray;}
 .colRight input {text-align: left; padding-left: 1ch}
 .colRight a {text-decoration: none}
 .colRight hr {margin: 32px}
+.searchCardResult {font-size: 24px}
+.searchRow div {margin: 0}
 
 
 .colMid {text-align: center}
